bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q11 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
UnionExec
  ProjectionExec: expr=[predicate@0 as property, CAST(object@1 AS Struct("term_type": non-null Int8, "value": non-null Utf8, "data_type": Utf8, "language_tag": Utf8)) as hasValue, NULL as isValueOf]
    FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250,data_type:,language_tag:}, projection=[predicate@2, object@3]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> ?property ?hasValue], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(subject@1, term_type) = 0 AND get_field(subject@1, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250 AND get_field(subject@1, data_type) IS NULL AND get_field(subject@1, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
  ProjectionExec: expr=[predicate@0 as property, NULL as hasValue, CAST(subject@1 AS Struct("term_type": non-null Int8, "value": non-null Utf8, "data_type": Utf8, "language_tag": Utf8)) as isValueOf]
    FilterExec: graph@0 IS NULL AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250,data_type:,language_tag:}, projection=[predicate@2, subject@1]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?isValueOf ?property <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GOSP/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, object@3 ASC, subject@1 ASC, predicate@2 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(object@3, term_type) = 0 AND get_field(object@3, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250 AND get_field(object@3, data_type) IS NULL AND get_field(object@3, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
