bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q11 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(property@0) as property, ENC_PT(hasValue@1) as hasValue, ENC_PT(isValueOf@2) as isValueOf]
  UnionExec
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> ?property ?hasValue], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[predicate@2 as property, object@3 as hasValue, NULL as isValueOf], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> <= subject_max@2, required_guarantees=[subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?isValueOf ?property <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GOSP/delta-parquet-file.zstd.parquet]]}, projection=[predicate@2 as property, NULL as hasValue, subject@1 as isValueOf], file_type=parquet, predicate=graph@0 IS NULL AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>, pruning_predicate=graph_null_count@0 > 0 AND object_null_count@3 != row_count@4 AND object_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> <= object_max@2, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>)]
