bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q11 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
DecodeObjectIds: columns=[hasValue, isValueOf, property]
  Union
    Projection: property, hasValue, Int64(NULL) AS isValueOf
      QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250> ?property ?hasValue]
    Projection: property, Int64(NULL) AS hasValue, isValueOf
      QuadPattern: triple_pattern=[?isValueOf ?property <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>]
