bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(deliveryDays@7) as deliveryDays, ENC_PT(offerURL@5) as offerURL, ENC_PT(price@6) as price, ENC_PT(productURI@0) as productURI, ENC_PT(productlabel@1) as productlabel, ENC_PT(validTo@8) as validTo, ENC_PT(vendorURI@2) as vendorURI, ENC_PT(vendorhomepage@4) as vendorhomepage, ENC_PT(vendorname@3) as vendorname]
  CrossJoinExec
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@3, vendorhomepage@5]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@4]
              CrossJoinExec
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productURI@0, productURI@0)], projection=[productURI@0, productlabel@2]
                  DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, object=?productURI
                  DataSourceExec: [GPOS] subject=?productURI, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?productlabel, additional_filters=[DynamicFilter [ Generation 2; productURI in (<object id range>) ]]
                DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>, object=?vendorURI
              DataSourceExec: [GPOS] subject=?vendorURI, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?vendorname, additional_filters=[DynamicFilter [ Generation 2; vendorURI in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?vendorURI, predicate=<http://xmlns.com/foaf/0.1/homepage>, object=?vendorhomepage, additional_filters=[DynamicFilter [ Generation 2; vendorURI in (<object id range>) ]]
          DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage>, object=?offerURL
        DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, object=?price
      DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays>, object=?deliveryDays
    DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>, object=?validTo
