bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[deliveryDays@7 as deliveryDays, offerURL@5 as offerURL, price@6 as price, productURI@0 as productURI, productlabel@1 as productlabel, validTo@8 as validTo, vendorURI@2 as vendorURI, vendorhomepage@3 as vendorhomepage, vendorname@4 as vendorname]
  DecodeObjectIdsExec: projections=[decode(productURI__oid) as productURI, decode(productlabel__oid) as productlabel, decode(vendorURI__oid) as vendorURI, decode(vendorhomepage__oid) as vendorhomepage, decode(vendorname__oid) as vendorname, decode(offerURL__oid) as offerURL, decode(price__oid) as price, decode(deliveryDays__oid) as deliveryDays, decode(validTo__oid) as validTo]
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          CrossJoinExec
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI__oid@2, vendorURI__oid@0)], projection=[productURI__oid@0, productlabel__oid@1, vendorURI__oid@2, vendorhomepage__oid@3, vendorname__oid@5]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI__oid@2, vendorURI__oid@0)], projection=[productURI__oid@0, productlabel__oid@1, vendorURI__oid@2, vendorhomepage__oid@4]
                CrossJoinExec
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productURI__oid@0, productURI__oid@0)], projection=[productURI__oid@0, productlabel__oid@2]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?productURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as productURI__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23401, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23401 AND 23401 <= predicate_max@6, required_guarantees=[predicate in (23401), subject in (50605)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productURI <http://www.w3.org/2000/01/rdf-schema#label> ?productlabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as productURI__oid, object@3 as productlabel__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendorURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as vendorURI__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23402, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23402 AND 23402 <= predicate_max@6, required_guarantees=[predicate in (23402), subject in (50605)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://xmlns.com/foaf/0.1/homepage> ?vendorhomepage], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as vendorURI__oid, object@3 as vendorhomepage__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14902 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14902 AND 14902 <= predicate_max@2, required_guarantees=[predicate in (14902)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://www.w3.org/2000/01/rdf-schema#label> ?vendorname], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as vendorURI__oid, object@3 as vendorname__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> ?offerURL], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as offerURL__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23407, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23407 AND 23407 <= predicate_max@6, required_guarantees=[predicate in (23407), subject in (50605)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as price__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23403, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23403 AND 23403 <= predicate_max@6, required_guarantees=[predicate in (23403), subject in (50605)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as deliveryDays__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23406, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23406 AND 23406 <= predicate_max@6, required_guarantees=[predicate in (23406), subject in (50605)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?validTo], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.parquet:0..12052491]]}, projection=[object@3 as validTo__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 50605 AND predicate@2 = 23405, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 50605 AND 50605 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 23405 AND 23405 <= predicate_max@6, required_guarantees=[predicate in (23405), subject in (50605)]
