bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Execution Plan, Plain Term).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[deliveryDays@7 as deliveryDays, offerURL@5 as offerURL, price@6 as price, productURI@0 as productURI, productlabel@1 as productlabel, validTo@8 as validTo, vendorURI@2 as vendorURI, vendorhomepage@4 as vendorhomepage, vendorname@3 as vendorname]
  CrossJoinExec
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@3, vendorhomepage@5]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@4]
              CrossJoinExec
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productURI@0, productURI@0)], projection=[productURI@0, productlabel@2]
                  DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?productURI], blank_node_mode=Variable
                  FilterExec: DynamicFilter [ productURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:} AND productURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:} AND productURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:}]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?productURI <http://www.w3.org/2000/01/rdf-schema#label> ?productlabel], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ productURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:} AND productURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:} AND productURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product441,data_type:,language_tag:}]) ]]
                DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendorURI], blank_node_mode=Variable
              FilterExec: DynamicFilter [ vendorURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:}]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?vendorURI <http://www.w3.org/2000/01/rdf-schema#label> ?vendorname], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ vendorURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:}]) ]]
            FilterExec: DynamicFilter [ vendorURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:}]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?vendorURI <http://xmlns.com/foaf/0.1/homepage> ?vendorhomepage], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ vendorURI@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:} AND vendorURI@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5,data_type:,language_tag:}]) ]]
          DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> ?offerURL], blank_node_mode=Variable
        DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable
      DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable
    DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?validTo], blank_node_mode=Variable
